--- a/.github/workflows/update-checker-luci.yml
+++ b/.github/workflows/update-checker-luci.yml
@@ -9,7 +9,7 @@
 # Description: Source code update checker
 #
 
-name: Update Checker
+name: Luci Update Checker
 
 env:
   REPO_URL: https://github.com/immortalwrt/luci
