--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -201,6 +201,12 @@ jobs:
             - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/immortalwrt/immortalwrt/tree/openwrt-21.02)更新记录】
             ${{ env.useVersionInfo }}
 
+      - name: Notify
+        if: steps.compile.outputs.status == 'success'
+        env:
+          BOT_TOKEN: ${{ secrets.telegram_bot_token }}
+        run: curl -sSL https://api.telegram.org/bot$BOT_TOKEN/sendMessage?chat_id=-1001997284793&text=WRT+Build+success
+
       - name: Delete workflow runs
         uses: Mattraks/delete-workflow-runs@v2
         with:
