--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -198,7 +198,7 @@ jobs:
           artifacts: ${{ env.FIRMWARE }}/*
           body: |
             - 默认IP：192.168.0.1 无密码
-            - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/immortalwrt/immortalwrt/tree/openwrt-21.02)更新记录】
+            - 当前使用版本:【[${{ env.REPO_BRANCH }}](https://github.com/immortalwrt/immortalwrt/tree/${{ env.REPO_BRANCH }})更新记录】
             ${{ env.useVersionInfo }}
 
       - name: Delete workflow runs
