--- a/.github/workflows/build-openwrt-xray.yml
+++ b/.github/workflows/build-openwrt-xray.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build immortalwrt (dae varient)
+name: Build immortalwrt (xray varient)
 
 on:
   repository_dispatch:
@@ -23,7 +23,7 @@ env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt
   REPO_BRANCH: v24.10.1
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: ax6s.dae.config
+  CONFIG_FILE: ax6s.xray.config
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
