chore: sperate tag for xray variant

--- a/.github/workflows/build-openwrt-xray.yml
+++ b/.github/workflows/build-openwrt-xray.yml
@@ -28,7 +28,7 @@ env:
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  FILE_NAME: ax6s
+  FILE_NAME: ax6s-xray
 
 jobs:
   build:
