--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -203,9 +203,10 @@ jobs:
 
       - name: Notify
         if: steps.compile.outputs.status == 'success'
+        shell: bash
         env:
           BOT_TOKEN: ${{ secrets.telegram_bot_token }}
-        run: curl -sSL https://api.telegram.org/bot$BOT_TOKEN/sendMessage?chat_id=-1001997284793&text=WRT+Build+success
+        run: curl -sSL https://api.telegram.org/bot$BOT_TOKEN/sendMessage?chat_id=-1001997284793&text=$FILE_NAME+Build+successful
 
       - name: Delete workflow runs
         uses: Mattraks/delete-workflow-runs@v2
