--- a/.github/workflows/update-checker-luci.yml
+++ b/.github/workflows/update-checker-luci.yml
@@ -13,12 +13,12 @@ name: Luci Update Checker
 
 env:
   REPO_URL: https://github.com/immortalwrt/luci
-  REPO_BRANCH: openwrt-24.01
+  REPO_BRANCH: openwrt-24.10
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: 0 * 1,7,14,21,28,31 * *
+    - cron: 0 0 1,7,14,21,28,31 * *
 
 jobs:
   check:
